# Light-Soft-Rasterizer

./: CMakeLists.txt  README.md
examples/: out.ppm  output.ppm
src/Model/: horse_head_1k.mtl  marble_bust_01_1k.mtl
src/Rasterizer/: Camera.cpp  Camera.h  Fragment.h  FrameBuffer.h  Light.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vertex.h  ZBuffer.cpp  ZBuffer.h
src/core/: main.cpp
src/math/: Color.h  MathUtils.h  Matrix4f.cpp  Matrix4f.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.hpp  Vector4f.cpp  Vector4f.h  main.cpp
